# pitext-travel-dev

./: .env.example  Procfile  VAD_CONFIGURATION.md  __init__.py  debug_websocket.py  main.py  pitext-rootCode Folder compiled_folder_content.txt  pyproject.toml  requirements.txt
.cursor/rules/: accuracyoverspeed.mdc  avoidunnecessarymocktests.mdc
pitext_travel/: requirements.txt
pitext_travel/api/: chat.py  config.py  geocoding.py  llm.py  models.py
pitext_travel/api/realtime/: __init__.py  audio_handler.py  client.py  function_handler.py  session_manager.py
pitext_travel/api/services/: itinerary_service.py  map_service.py  voice_service.py
pitext_travel/routes/: __init__.py  travel.py  websocket.py
pitext_travel/routes/websocket/: __init__.py  audio.py  base.py  callback_helpers.py  connection.py  session.py
pitext_travel/static/css/: base.css  chat.css  controls.css  hexagon.css  panel.css  vad.css
pitext_travel/static/js/: app.js  chat.js  vad_init.js  voice.js
pitext_travel/static/js/app/: coordinator.js  google-maps-init.js  initializer.js  main.js
pitext_travel/static/js/map/: controls.js  day_controls_core.js  google-maps.js  info_windows.js  markers.js  module-loader.js  renderer.js  route_fallback.js  routes.js
pitext_travel/static/js/realtime/: audio_capture.js  audio_player.js  controller.js  realtime_controller.js  setup.js  vad_processor.js  websocket_client.js  (+3 more)
pitext_travel/templates/: map.html
routes/: travel.py
static/js/: app.js  chat.js
static/js/map/: routes.js
static/js/realtime/: audio_capture.js
templates/: map.html
(+7 files in other folders)
